# LSST-GW

./: .gitignore  FootprintTutorial.ipynb  GWtutorial.ipynb  INSTRUCTIONS_Sao_Paolo_workshop.md  README.md  pyproject.toml
src/LSST_GW/: eventVisualisation.py  eventsSelector.py
