[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "LSST_GW"
version = "0.1.0"
description = "GW monitoring with LSST alerts"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Leonard Lebrun", email = "leonard.lebrun@physik.uzh.ch"}
]
keywords = ["astronomy", "alerts", "GW", "gravitational-waves", "gracedb"]

# Core dependencies required for the package to work
# Use flexible version constraints (>=) to allow pip to resolve versions
dependencies = [
    "GWUtils @ git+https://github.com/Lgtlebrun/GWUtils.git",
    "numpy>=1.20.0",
    "astropy>=5.0",
    "astropy-healpix>=1.0",
    "pandas>=1.3.0",
    "ligo-gracedb>=2.0",
    "healpy>=1.16.0",
    "requests>=2.28.0",
    "ligo.skymap",
    "gwosc",
    "shapely",
    "matplotlib>=3.5",
]

# Optional dependency groups
[project.optional-dependencies]
# Development tools
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "ipython>=8.0",
    "ipdb>=0.13",
]

[project.scripts]
lsst-gw-select-events = "LSST_GW.eventsSelector:cli"
lsst-gw-visualise-event = "LSST_GW.eventVisualisation:cli"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

